--- a/pt6-destination.html
+++ b/pt6-destination.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destination</title>
     <script>
-        function intialize(){
+        function initialize(){
             visitsOut = document.getElementById("visits");
 
             if (!sessionStorage.numVisits){
